# multirobot_simulation

./: Readme.md  plot_rect.py  rect.py  sq.py
cartographer_slam/: package.xml
cartographer_slam/config/: cafe_map.pgm  cafe_map.yaml  empty_room.yaml
cartographer_slam/launch/: cartographer.launch.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
localization_server/: package.xml
localization_server/config/: barista_0_amcl_config.yaml  barista_1_amcl_config.yaml  barista_2_amcl_config.yaml  barista_3_amcl_config.yaml  rviz_config.rviz
localization_server/launch/: localization.launch.py  rviz_config.launch.py
multirobot_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
multirobot_bringup/config/: pose-list.yaml
multirobot_bringup/launch/: compute_pose.launch.py  goto_pose.launch.py  multirobot_bringup.launch.xml  reset_poses.launch.py  send_goal_poses.launch.py  send_pallet_poses.launch.py  simulation_bringup.launch.xml
multirobot_bringup/multirobot_bringup/: pallet_side_goals.py  send_goals.py
multirobot_navigation/: package.xml  setup.py
multirobot_navigation/multirobot_navigation/: compute_pallet_poses.py  goal_publisher.py  main.py  pallet_side_goals.py  robot_goal_publisher.py  robot_reset_pose.py  send_goals.py  send_pallet_poses.py
path_planner_server/config/: barista_0_bt_navigator.yaml  barista_0_controller.yaml  barista_0_planner_server.yaml  barista_1_bt_navigator.yaml  barista_1_controller.yaml  barista_1_planner_server.yaml  barista_2_bt_navigator.yaml  barista_2_controller.yaml  barista_2_planner_server.yaml  utils.py  (+3 more)
(+2 files in other folders)
